package MyInterfaces;

public interface InteractAble {
    void interact();
}
