package MyInterfaces;

import MyEnums.MaterialType;

public interface Material {
    String getMaterialDescription();
    MaterialType getMaterialType();
}
