package MyClasses.materials;


import MyEnums.MaterialType;

public class Tulle extends MyMaterial {


    public Tulle(MaterialType Type){
        super("Tulle", Type);
    }
}
