package MyEnums;

public enum Colors {
    BLACK, WHITE , RED , BLUE
}
