package MyInterfaces;

public interface EmbraceAble {
    void embrace();
}
