package MyClasses.decorations;


public class Swansdown extends Decoration {

    public Swansdown(){
        super("Swansdown");
    }


}
