package MyClasses.materials;


import MyEnums.MaterialType;

public class Brocade extends MyMaterial {
    public Brocade(MaterialType Type){
        super("Brocade", Type);
    }


}
