package MyClasses.materials;

import MyEnums.MaterialType;
import MyInterfaces.Material;

public class Silk extends MyMaterial {
    public Silk(MaterialType Type){
        super("Silk", Type);
    }
}
