package MyInterfaces;

public interface AffectAble {
    void showEffect();
}
