package MyInterfaces;

public interface BuryAble {
    void bury();
}
