package MyInterfaces;

public interface CaressedAble {
    void caressed();
}
