package MyInterfaces;

import MyEnums.Colors;

public interface Dress {

    Colors getDressColor();

    Material getDressMaterial();

    Decorations getDressDecorations();

    boolean isHanging();



}
