package MyInterfaces;

public interface ICharacter {
    String getName();

}
