package MyInterfaces;

public interface PressAble {
    void press();
}
